The start of success

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port=3306
+spring.datasource.url= jdbc:mysql://localhost:3306
+spring.datasource.username = root
+spring.datasource.password = newipad2012
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
 
